--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "build": "npx tsc",
     "dev": "nodemon index.ts",
     "createAdminUser": "ts-node ./data/CreateAdminUser.ts",
-    "start:prod": "node build/server/index.js"
+    "start:prod": "node build/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
