--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
